@W-17663045 fix(form-element): Move clear to fix alignment and avoid regressions - part 2 (#5474)
* fix(form-element): move bugfix out of the main block to update targeted selectors

* chore: update release notes

* fix: use clearfix mixin to avoid more edge cases, update release notes

--- a/ui/components/form-element/horizontal/_index.scss
+++ b/ui/components/form-element/horizontal/_index.scss
@@ -58,13 +58,6 @@
   }
 
   @include mq-medium-min {
-
-    // Ensure the form element is cleared to reset the float of the label
-    // Note: Avoid a bug where longer length labels may overlap with form element below
-    .slds-form-element.slds-form-element_horizontal {
-      clear: both;
-    }
-
     // Handle label - default behavior
     .slds-form-element__label {
       float: left;
@@ -144,5 +137,16 @@
   // Position the inline help text correctly when in horizontal/compact layout
   .slds-form-element__help {
     margin-left: 33%;
+  }
+}
+
+// Bugfix: Avoid a bug where longer length labels may overlap with form element below
+// - Ensure the form element is cleared to reset the `float: left` of the label within the form element
+// - Cannot use `&.slds-form-element` in the main block above, because of `.slds-form_horizontal .slds-form-element,`
+.slds-form-element_horizontal.slds-form-element,
+.slds-form_horizontal .slds-form-element,
+.slds-form_stacked .slds-form-element_horizontal.slds-form-element {
+  @include mq-medium-min {
+    @include clearfix;
   }
 }
